# backend-rust

./: .bazelrc  .env.example  .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE
migrations/2021-08-28-105216_create_users/: up.sql
migrations/2021-09-18-105607_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  secret.key.sample
src/db/: character_db.rs  mod.rs  users.rs
src/models/: jwt_token.rs  mod.rs  user.rs
src/routes/: home.rs
src/routing/: characters.rs  index.rs  mod.rs
src/utils/: jwt_token.rs  mod.rs
