[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
# async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.159", features = ["derive"] }
tide = "0.16.0"
