[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.27.0", features = ["full"] }
